--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 heekkr = "0.0.0"
-reqwest = { version = "0.11.22", features = ["json"] }
+reqwest = { version = "0.11.22", features = [
+    "json",
+    "rustls-tls-native-roots",
+], default-features = false }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.33.0", features = ["full"] }
 tokio-stream = "0.1.14"
