--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.33.0", features = ["full"] }
 tokio-stream = "0.1.14"
 tonic = "0.10.2"
 clap = { version = "4.4", features = ["derive"] }
+url = "2.4.1"
