--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ tokio-stream = "0.1.14"
 tonic = "0.10.2"
 clap = { version = "4.4", features = ["derive"] }
 url = "2.4.1"
+cached = "0.46.0"
+cached-store-gcs = "0.1.0"
