--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ tonic = "0.10.2"
 clap = { version = "4.4", features = ["derive"] }
 url = "2.4.1"
 cached = "0.46.0"
-cached-store-gcs = "0.1.0"
+cached-store-gcs = { version = "0.1.1", default-features = false, features = ["rustls-tls"] }
